project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-a-b
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /service-a
        pathType: Prefix
        backend:
          service:
            name: service-a  # Your existing Bitcoin service
            port:
              number: 80
      - path: /service-b
        pathType: Prefix
        backend:
          service:
            name: service-b  # You'll need to create this service
            port:
              number: 80
